# motor_control

./: CMakeLists.txt  README.MD  data.txt
lcm-types/: data.lcm  file_list.txt
lcm-types/cpp/: imu_data.hpp  motor_data.hpp
lcm-types/lcmtypes/: imu_data.java  motor_data.java
lcm-types/python/: imu_data.py  motor_data.py
lcm_data/: CMakeLists.txt  listener.cpp
motor/: CMakeLists.txt  Loop.hpp  config.h  config_main.cpp  config_main.h  motor_control.c  motor_control.h  transmit.c  transmit.h
result-data/: data_convert_auto.sh
result-data/lcm_log/: data.lcm
result-data/matlab_log/: L_diff.m  center_dott.m  center_length.m  current.m  data.mat  findreason.m  height_change.mat  hope_actual.m  jumpuphope.m  knee_angle_hope.asv  knee_angle_hope.m  l_hipwheel.m  record_max_height.mat  torque_hope.m
result-data/matlab_log/m/: hip_knee_current.m  hipkneewheeltorque.m  knee_angle_hope.asv  knee_angle_hope.m  knee_torque.m  plot_gps.m  quarticSpline.m  simple_plot.asv
scripts/: data_log.sh  run-command-hit  send_to_remote.sh
scripts/lcm-log2smat/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/: Interface.cpp  Interface.h  InverseKinematics.cpp  InverseKinematics.h  MotorControl.cpp  MotorControl.h  main.cpp
